@startuml
'https://plantuml.com/sequence-diagram

interface DAO {
    +{abstract}getAllScores():void
    +{abstract}getScore(String username):void
    +{abstract}addScore(Player player):void
    +{abstract}updateScore(Player player):void
    +{abstract}deleteScore(int id):void
}

class DaoImpl{
    -in:InputStream;
    -folderPath:String;
    -fileName:String;
    -br:BufferedReader;
    -folderFilePath:String;
    +DaoImpl():void
    +getAllScores():List<Player>
    +getScore(String username):List<Player>
    +addScore(Player player):void
    +updateScore(Player player):void
    +deleteScore(int id):void
}
DAO <|.. DaoImpl

class Player{
    -score:int
    -username:String
    -time:String
    +Player():void
    +getUsername(String username):String
    +toString():String
    +compareTo(object o):int
}
Player <-- DaoImpl

Game ..> DAO
@enduml